[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
roaring = "0.10"
bitmaps = "3.2"
itertools = "0.10"
num = "0.4"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from", "into"]