[package]
name = "lccsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel={path="../kernel"}
itertools = "0.10"
thiserror = "1"
rand = "0.8"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from", "into"]