[package]
name = "tool"
version = "0.1.0"
authors = ["Pavlo Tokariev <pavlo.tokariev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ccsl={path="../ccsl"}
structopt = "0.3"
petgraph = "0.5"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
num = "0.4"
rayon = "1.5"
parquet = "4.1"
concat-arrays = "0.1.2"
arrow = "4.1"
lehmer = "3.0.0"
rand = "0.8.3"
permutation = "0.2.5"

[build]
rustflags = ["-C", "target-cpu=native"]
