[package]
name = "tool"
version = "0.1.0"
authors = ["Pavlo Tokariev <pavlo.tokariev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ccsl={path="../ccsl"}
structopt = "0.3"
petgraph = "0.6"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
num = "0.4"
rayon = "1.5"
parquet = "17"
arrow = "17"
lehmer = "3"
rand = "0.8"
permutation = "0.2"
anyhow = "1"
polars = { version="0.22.8",features = [ "lazy", "parquet", "csv-file" ] }
walkdir = "2"
soa_derive = "0.12.0"