[package]
name = "tool"
version = "0.2.0"
authors = ["Pavlo Tokariev <pavlo.tokariev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ccsl={path="../ccsl"}
structopt = "0.3"
petgraph = "0.6"
itertools = "0.10"
rand = "0.8"
anyhow = "1"